# archive-pdf-tools

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  deprecated_hocr2pdf.py  mrc.py  pdfrenderer.py  pyproject.toml  recode.py  requirements.txt  run-all-tools.sh  setup.cfg  setup.py
.github/workflows/: wheels.yml
cython/: optimiser.pyx  sauvola.pyx
doc/source/: index.rst  mrc.rst  pdfrenderer.rst  recode.rst  scandata.rst
docs/: requirements.txt
docs/source/: conf.py  cython.rst  example.rst  index.rst  pagenumbers.rst  pdfhacks.rst
internetarchivepdf/: __init__.py  const.py  grayconvert.py  jpeg2000.py  mrc.py  pagenumbers.py  pdfhacks.py  pdfrenderer.py  recode.py  scandata.py
test-scripts/: minicjk.py
tests/: run.py  testimages.py
tests/files/burn-care-inverted/: burn.jp2  hocr.html
tests/files/disenoindustrial0000unse_text/: disenoindustrial0000unse_0040.jp2  hocr.html
tests/files/hebrew-red-text/: hebrewphrasebook0000wist_0020.jp2  hebrewphrasebook0000wist_20.html
tests/files/hebrewphrasebook0000wist/: hebrewphrasebook0000wist_0078.jp2  hebrewphrasebook0000wist_78.html
tests/files/lanjing-cover/: lanjing.html  lanjingdeyanjing0000bing_0001.jp2
tests/files/lanjing-text-and-image/: lanjing.html  lanjingdeyanjing0000bing_0012.jp2
tests/files/nytimes/: hocr.html
tests/files/rome-ceneri-art-text/: cd_le-ceneri-di-heliodoro_rome_0001.jp2  rome.html
tests/files/rome-ceneri-white-text/: cd_le-ceneri-di-heliodoro_rome_0007.jp2  (+1 more)
tools/: compress  maskview  merge  mrcview  mrcview.py  partial-blur  pdfimagesmrc  threshold-image
(+8 files in other folders)
