[metadata]
name = archive-pdf-tools
author = Merlijn Boris Wolf Wajer
author_email = merlijn@archive.org
description = Internet Archive PDF compression tools
long_description = file: README.rst
license = AGPL-3.0
url = https://github.com/internetarchive/archive-pdf-tools
keywords = PDF, MRC, hOCR, Internet Archive
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3

[options]
packages =
    internetarchivepdf
scripts =
    bin/recode_pdf
    bin/pdf-metadata-json
    bin/pdfcomp
    bin/compress-pdf-images
    bin/epub-to-pdf
    tools/mrcview
    tools/maskview
    tools/pdfimagesmrc
include_package_data = true
zip_safe = false
python_requires = >=3.6
install_requires =
    PyMuPDF >=1.19
    Pillow >=8.3
    archive_hocr_tools >=1.1.41
    xmltodict >=0.12
    roman >=3.3
    numpy
    lxml
    scikit-image

[options.package_data]
internetarchivepdf = data/*

[options.extras_require]
docs =
    sphinx >=3
